fix: don't apply overflow hidden to header

--- a/resources/scss/ceres/common/_common.scss
+++ b/resources/scss/ceres/common/_common.scss
@@ -1,4 +1,3 @@
-header#page-header,
 div#page-body,
 div.footer {
     overflow-x: hidden;
